[metadata]
name = pyingx
summary = common library
author = OpenStack
classifier =
    Environment :: Yingxin
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    pyingx

[pbr]
warnerrors = true

[entry_points]

[wheel]
universal = 1
