[metadata]
name = pyingx
summary = common library
author = OpenStack
classifier =
    Environment :: Yingxin
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    pyingx

[pbr]
warnerrors = true

[entry_points]
console_scripts =
    pyingx_main = pyingx.cmd.main:main

pyingx.api.v1 =
    test = pyingx.api.v1.test:Test

[wheel]
universal = 1
